
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_6__ TYPE_3__ ;
typedef struct TYPE_5__ TYPE_2__ ;
typedef struct TYPE_4__ TYPE_1__ ;


struct TYPE_5__ {scalar_t__ s_addr; } ;
struct sockaddr_in {TYPE_2__ sin_addr; void* sin_family; int sin_port; } ;
struct sockaddr {int dummy; } ;
struct in_addr {int dummy; } ;
struct hostent {int h_name; } ;
typedef int sin ;
typedef int i ;
struct TYPE_6__ {char* rev; TYPE_1__* he; int port; } ;
struct TYPE_4__ {int h_addr; } ;


 void* AF_INET ;
 int SOCK_STREAM ;
 int SOL_SOCKET ;
 int SO_REUSEADDR ;
 int bzero (struct sockaddr_in*,int) ;
 int fd ;
 struct hostent* gethostbyaddr (char*,int,void*) ;
 int getsockname (int ,struct sockaddr*,int*) ;
 int htons (int ) ;
 int memcpy (scalar_t__*,int ,int) ;
 int printf (char*,char*) ;
 TYPE_3__ tesopt ;
 int xbind (int ,struct sockaddr*,int) ;
 int xconnect (int ,struct sockaddr*,int) ;
 int xsetsockopt (int ,int ,int ,int*,int) ;
 int xsocket (void*,int ,int ) ;
 char* xstrdup (int ) ;

void
connect_to_ftp (void)
{
    int i = 1;
    struct sockaddr_in sin;
    struct hostent *he;


    fd = xsocket (AF_INET, SOCK_STREAM, 0);
    xsetsockopt (fd, SOL_SOCKET, SO_REUSEADDR, &i, sizeof (i));

    bzero (&sin, sizeof (sin));

    sin.sin_family = AF_INET;

    sin.sin_addr.s_addr = 0;

   xbind (fd, (struct sockaddr*) &sin, sizeof (sin));

    sin.sin_port = htons (tesopt.port);
    sin.sin_family = AF_INET;

    memcpy (&sin.sin_addr.s_addr, tesopt.he->h_addr, sizeof (struct in_addr));

    xconnect (fd, (struct sockaddr*) &sin, sizeof (sin));


    if (tesopt.rev == ((void*)0)) {
        i = sizeof (sin);
        getsockname (fd, (struct sockaddr *) &sin, &i);
        he = gethostbyaddr ((char *) &sin.sin_addr,
                            sizeof (sin.sin_addr), AF_INET);
        tesopt.rev = xstrdup (he->h_name);
    }
    printf ("Connected! revlookup is: %s, logging in...\n", tesopt.rev);

    return;
}
